syntax = "proto3";
package mrpc;

enum ErrorCode
{
    ERROR_SUCCESS                           = 0;
    ERROR_INITIALIZATION_FAILED             = 1;
    ERROR_TIMEOUT                           = 2;
    ERROR_EXCEPTION                         = 3;

    // service
    ERROR_INVALID_SERVICE_NAME              = 101;
    ERROR_INVALID_SERVICE_NAME_HASH         = 102;
    ERROR_INVALID_SERVICE_REQUEST_DATA      = 103;
    ERROR_INVALID_SERVICE_RESPONSE_DATA     = 104;

    // methods
    ERROR_INVALID_METHOD_NAME               = 201;
    ERROR_INVALID_METHOD_NAME_HASH          = 202;
    ERROR_INVALID_METHOD_REQUEST_DATA       = 203;
    ERROR_INVALID_METHOD_RESPONSE_DATA      = 204;
};
