syntax = "proto2";
package mrpc;

import "google/protobuf/descriptor.proto";

enum CppContainerType
{
    vector                  = 101;
    list                    = 102;

    map                     = 201;
    unordered_map           = 202;
}

/*
extend google.protobuf.FileOptions
{
    optional bool reserved_file_option              = 82001;
}

extend google.protobuf.EnumOptions
{
    optional bool reserved_enum_option              = 82001;
}

extend google.protobuf.EnumValueOptions
{
    optional bool reserved_enum_value_option        = 83001;
}

extend google.protobuf.MessageOptions
{
    optional bool reserved_message_option           = 84001;
}
*/

extend google.protobuf.FieldOptions
{
    // repeated字段可以设成CPPTYPE_LIST
    // map字段可以设成CPPTYPE_UNORDERED_MAP
    optional CppContainerType cpp_type              = 85001;
}

/*
extend google.protobuf.OneofOptions
{
    optional bool reserved_one_of_option            = 86001;
}

extend google.protobuf.ServiceOptions
{
    optional bool reserved_service_option           = 87001;
}

extend google.protobuf.MethodOptions
{
    optional bool reserved_method_option            = 88001;
}
*/
